[project]
name = "sensor-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "boto3>=1.40.6",
    "cloudpathlib>=0.21.1",
    "matplotlib>=3.10.5",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ray[client]>=2.48.0",
]

[tool.setuptools.packages.find]
include = ["sensor_data_analysis*"]
exclude = ["data*"]

[tool.pyright]
typeCheckingMode = "strict"
exclude = []

# Make pyright less strict in the tests directory
[[tool.pyright.overrides]]
include = ["tests"]
typeCheckingMode = "basic"
